crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_auto_discovered_columns.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 564
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────────────────────────┐
│   status                          blocked_on                      ws_status                      │
│●  working                         review                          idle                           │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────────────────────────┐
│blocked_on       review                                                                           │
│ws_status        idle                                                                             │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
