crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_both_collapsed.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 744
expression: output
---
Agents [t to expand]────────────────────────────────────────────────────────────
Metadata [m to expand]──────────────────────────────────────────────────────────
┌Terminal (i=input)────────────────────────────────────────────────────────────┐
│$ make build                                                                  │
│ok                                                                            │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
