crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_detail_overlay_no_metadata.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 703
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                                                     │
│○  ┌ Agent Detail (Enter to close) ───────────────────────────────────────┐   │
└───│session_id       s1                                                   │───┘
┌Met│cwd              /home/user/project                                   │───┐
│Thi│state            idle                                                 │   │
│   │updated_at       18446744073709551615                                 │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   │                                                                      │   │
│   └──────────────────────────────────────────────────────────────────────┘   │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
