crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_empty_state.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 497
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│No agents detected.                                                           │
│                                                                              │
│Agents appear when Claude Code hooks                                          │
│POST to /api/v1/agent/notify.                                                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
