crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_help_overlay.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 920
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                                                     │
│●  working                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│This agent is not publishing metadata via hooks.                              │
│                 ┌ Help (? to close) ───────────────────────┐                 │
│                 │Keybindings:                              │                 │
│                 │  q / C-c    Quit                         │                 │
│                 │  j / Down   Navigate down                │                 │
│                 │  k / Up     Navigate up                  │                 │
│                 │  t          Toggle agents table          │                 │
│                 │  m          Toggle metadata panel        │                 │
│                 │  Enter      Agent detail popup           │                 │
│                 │  r          Refresh                      │                 │
│                 │  i          Send input to terminal pane  │                 │
│                 │  ?          Toggle this help             │                 │
│                 └──────────────────────────────────────────┘                 │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
