crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_hidden_only_metadata.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 577
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                                                     │
│●  working                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│Session          s1                                                           │
│CWD              /home/user/myapp                                             │
│State            working                                                      │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Terminal (i=input)────────────────────────────────────────────────────────────┐
│$ echo hello                                                                  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
