crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_input_bar.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 764
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                                                     │
│●  working                                                                    │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│This agent is not publishing metadata via hooks.                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌Terminal (i=input)────────────────────────────────────────────────────────────┐
│$ cargo test                                                                  │
│running...                                                                    │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Send to pane (Esc to cancel) ────────────────────────────────────────────────┐
│› make build█                                                                 │
└──────────────────────────────────────────────────────────────────────────────┘
