crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_meta_collapsed.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 733
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   project                               status                               │
│●  myapp                                 working                              │
└──────────────────────────────────────────────────────────────────────────────┘
Metadata [m to expand]──────────────────────────────────────────────────────────
