crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_multiple_agents.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 539
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   project                               status                               │
│●  alpha                                 working                              │
│○  beta                                  idle                                 │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│project          alpha                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
