crates/arbor-tui/src/tabs/snapshots/arbor_tui__tabs__agents__tests__snapshot_single_agent_no_metadata.snap
---
source: crates/arbor-tui/src/tabs/agents.rs
assertion_line: 505
expression: output
---
┌Agents────────────────────────────────────────────────────────────────────────┐
│   status                                elapsed                              │
│●  working                               0s                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌Metadata──────────────────────────────────────────────────────────────────────┐
│This agent is not publishing metadata via hooks.                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
